# shaka-security-scanner

./: .gitignore  ADVANCED_UPGRADE_SUMMARY.md  AGENT.md  AI_INTEGRATION_SUMMARY.md  CMS_UPGRADE_SUMMARY.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  FRONTEND_VERIFICATION_REPORT.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  README.md  UPGRADE_PLAN.md  USAGE_GUIDE.md  advanced_demo.py  ai_demo.py  cms_demo.py  demo_scan.py  final_test.py  pyproject.toml  setup.py
DEV/: .env.backend  .env.frontend  AI_INTEGRATION_STATUS.md  DEV_ENVIRONMENT_STATUS.md  PRIORITY1_FIX_SUMMARY.md  README.md  backend-server.py  run-active-scan.sh  run-ai-scan.sh  run-comprehensive-scan.sh  run-test-scan.sh  setup.sh  start-backend.sh  start-frontend.sh  stop-all.sh  test-bedrock-ai.py  test-config.yaml
DEV/test-results/: active-scan-20260418-235838.json  ai-scan-20260419-000720.json  ai-scan-20260419-001833.json  ai-scan-20260419-002509.json  ai-scan-20260419-002641.json  comprehensive-test1-20260418-234716.json  comprehensive-test1-20260418-235714.json  comprehensive-test2-20260418-234717.json  comprehensive-test2-20260418-235715.json  scan-scan-20260418234112-20260418-234246.json
config/: default-config.yaml
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/components/charts/: severity-distribution-chart.tsx  vulnerability-trend-chart.tsx
frontend/components/domain/: ai-insight-panel.tsx  chat-panel.tsx  log-viewer.tsx  scan-card.tsx  scan-create-modal.tsx  summary-card.tsx
frontend/components/layout/: page-shell.tsx  sidebar.tsx  topbar.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  progress.tsx  select.tsx  skeleton.tsx  switch.tsx  table.tsx  textarea.tsx
frontend/store/: ui-store.ts
frontend/types/: security.ts
payloads/: sql-injection.yaml
src/shaka_security_scanner/: __init__.py  models.py
src/shaka_security_scanner/ai/: __init__.py  analyzer.py  bedrock_client.py
src/shaka_security_scanner/core/: __init__.py  authorization.py  configuration.py  framework_core.py  scan_orchestrator.py
src/shaka_security_scanner/http/: __init__.py  client.py  logger.py  throttler.py
src/shaka_security_scanner/monitoring/: __init__.py
src/shaka_security_scanner/reporting/: __init__.py
src/shaka_security_scanner/scanners/: __init__.py  advanced_vulnerability.py  api.py  authentication.py  base.py  cms_vulnerability.py  headers.py  ssl_tls.py  (+3 more)
tests/: __init__.py  test_models.py
tests/unit/: __init__.py  test_advanced_vulnerability_scanner.py  test_ai_integration.py  test_api_scanner.py  test_audit_logger.py  test_authentication_scanner.py  test_authorization.py  test_cms_vulnerability_scanner.py  test_configuration.py  test_headers_scanner.py  test_http_client.py  test_input_validation_scanner.py  test_reconnaissance_scanner.py  test_scanner_base.py  test_ssl_tls_scanner.py  test_throttler.py  test_vulnerability_scanner.py
(+6 files in other folders)
