[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shaka-security-scanner"
version = "0.1.0"
description = "A comprehensive security testing tool for web applications with AWS Bedrock AI integration"
readme = "README.md"
authors = [
    {name = "Shaka Security Scanner Team"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "reportlab>=4.0.0",
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
    "pytest-asyncio>=0.21.0",
    "boto3>=1.28.0",  # AWS Bedrock AI integration
    "pyyaml>=6.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.280",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/shaka-security-scanner"
Repository = "https://github.com/yourusername/shaka-security-scanner.git"
Issues = "https://github.com/yourusername/shaka-security-scanner/issues"

[tool.setuptools]
packages = ["shaka_security_scanner"]

[tool.setuptools.package-dir]
shaka_security_scanner = "src/shaka_security_scanner"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "property_test: property-based tests using hypothesis",
    "unit_test: unit tests",
    "integration_test: integration tests",
    "e2e_test: end-to-end tests",
    "slow: slow running tests",
]